Se hizo el bloqueo de la cuenta con redis