@@ -18,7 +18,6 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -38,24 +37,34 @@ public class SecurityConfig {
             .csrf(AbstractHttpConfigurer::disable)
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .authorizeHttpRequests(auth -> auth
+                // Rutas públicas de autenticación
                 .requestMatchers(
                     "/api/auth/login",
                     "/api/auth/register",
-                    "/api/auth/refresh",
-                    "/api/auth/activate/**",
-                    "/api/auth/activate-account/**",
+                    "/api/auth/refresh-token",
+                    "/api/auth/activate-account",
                     "/api/auth/resend-activation-code",
                     "/api/auth/forgot-password",
                     "/api/auth/reset-password",
                     "/api/auth/request-unlock",
-                    "/api/auth/verify-unlock",
-                    "/api/auth/logout",
+                    "/api/auth/verify-unlock-code"
+                ).permitAll()
+                // Documentación API (Swagger)
+                .requestMatchers(
                     "/swagger-ui/**",
                     "/swagger-ui.html",
                     "/v3/api-docs/**",
                     "/swagger-resources/**",
                     "/webjars/**"
                 ).permitAll()
+                // Actuator endpoints públicos
+                .requestMatchers(
+                    "/actuator/health",
+                    "/actuator/info"
+                ).permitAll()
+                // Endpoint de error
+                .requestMatchers("/error").permitAll()
+                // Todas las demás rutas requieren autenticación
                 .anyRequest().authenticated()
             )
             .sessionManagement(session -> 
@@ -71,18 +80,44 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
+        
+        // Orígenes permitidos
         configuration.setAllowedOrigins(Arrays.asList(
             "http://localhost:3000",
             "http://localhost:4200",
             "http://localhost:5173"
         ));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+        
+        // Métodos HTTP permitidos
+        configuration.setAllowedMethods(Arrays.asList(
+            "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"
+        ));
+        
+        // Headers permitidos - especificar explícitamente para mejor seguridad
+        configuration.setAllowedHeaders(Arrays.asList(
+            "Authorization",
+            "Content-Type",
+            "Accept",
+            "X-Requested-With",
+            "X-XSRF-TOKEN"
+        ));
+        
+        // Headers expuestos al cliente
+        configuration.setExposedHeaders(Arrays.asList(
+            "Authorization",
+            "X-Token-Invalid-Reason"
+        ));
+        
+        // Permitir credenciales (cookies, authorization headers)
         configuration.setAllowCredentials(true);
+        
+        // Tiempo de caché de la configuración CORS (1 hora)
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
+        
+        log.info("CORS configurado con orígenes: {}", configuration.getAllowedOrigins());
         return source;
     }
 }
